[gd_scene load_steps=6 format=3 uid="uid://bdux16qnukd0r"]

[ext_resource type="Script" uid="uid://cbs6r0t0a74n" path="res://props/door/door_interaction.gd" id="1_d5n3v"]
[ext_resource type="Texture2D" uid="uid://cb0optxqts5ld" path="res://props/door/model.png" id="2_d5n3v"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_d5n3v"]
size = Vector2(8, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_osfg6"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_jhqbn"]
size = Vector2(3, 24)

[node name="door" type="Node2D"]
script = ExtResource("1_d5n3v")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1, 0)
texture = ExtResource("2_d5n3v")
hframes = 2

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4

[node name="closeCollision" type="CollisionShape2D" parent="Area2D"]
position = Vector2(4, 0)
shape = SubResource("RectangleShape2D_d5n3v")

[node name="openCollision" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_osfg6")
disabled = true

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 4

[node name="staticCollision" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(3.5, 0)
shape = SubResource("RectangleShape2D_jhqbn")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
